--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: go
 go:
   - "1.10"
 install:
-  - wget "https://github.com/Masterminds/glide/releases/download/0.13.1/glide-0.13.1-linux-amd64.tar.gz"
+  - wget "https://github.com/Masterminds/glide/releases/download/v0.13.1/glide-v0.13.1-darwin-amd64.tar.gz"
   - mkdir -p $HOME/bin
   - tar -vxz -C $HOME/bin --strip=1 -f glide-0.13.1-linux-amd64.tar.gz
   - export PATH="$HOME/bin:$PATH"
