--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,7 +1,7 @@
 builds:
   - main: main.go
     flags:
-      - -v
+      - -ldflags "-X github.com/scottmcclary1/predix-insights-cli/cmd.Version=`cat version` -X github.com/scottmcclary1/predix-insights-cli/cmd.GitHash=`git rev-parse HEAD`"
     binary: pi
     goos:
       - windows
