--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,7 +1,7 @@
 builds:
   - main: main.go
     flags:
-      - -ldflags:
+      - ldflags:
        - -X github.com/scottmcclary1/predix-insights-cli/cmd.Version={{.Tag}}
        - -X github.com/scottmcclary1/predix-insights-cli/cmd.GitHash={{.Commit}}
     binary: pi
