--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,8 +1,7 @@
 builds:
   - ldflags:
-   - -X "github.com/scottmcclary1/predix-insights-cli/cmd.Version={{.Tag}}"
-   - -X "github.com/scottmcclary1/predix-insights-cli/cmd.GitHash={{.Commit}}"
-  - main: main.go
+      - -s -w -X github.com/scottmcclary1/predix-insights-cli/cmd.Version={{.Tag}} -X github.com/scottmcclary1/predix-insights-cli/cmd.GitHash={{.Commit}}
+    main: main.go
     binary: pi
     goos:
       - windows
