--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -22,8 +22,8 @@ brew:
     system "#{bin}/pi --version"
   install: |
     bin.install "pi"
-    mkdir_p HOMEBREW_PREFIX"/etc/bash_completion.d"
-    mv prefix"/scripts/pi_completion.sh", HOMEBREW_PREFIX"/etc/bash_completion.d/pi_completion.sh"
+    mkdir_p "#{HOMEBREW_PREFIX}/etc/bash_completion.d"
+    mv "#{prefix}/scripts/pi_completion.sh", "#{HOMEBREW_PREFIX}/etc/bash_completion.d/pi_completion.sh"
     echo "if [ -f #{HOMEBREW_PREFIX} ]; then . #{HOMEBREW_PREFIX}/etc/bash_completion; fi" >> ~/.bashrc
     source ~/.bashrc
 archive:
